Added user authentication

--- a/frontend/src/routes/ProfilePage/ProfilePage.scss
+++ b/frontend/src/routes/ProfilePage/ProfilePage.scss
@@ -50,7 +50,14 @@
           align-items: center;
           gap: 20px;
         }
-
+        button{
+          background-color: teal;
+          width: 100px;
+          border: none;
+          padding: 10px 20px;
+          color: white;
+          cursor: pointer;
+        }
         img {
           width: 40px;
           height: 40px;
